--- a/assets/styles/layouts/_header.scss
+++ b/assets/styles/layouts/_header.scss
@@ -2,6 +2,28 @@
     * {
         font-size: 14px;
     }
+
+    .dropdown-menu {
+        background-color: #1d1f20;
+        border-color: #1d1f20;
+        position: absolute;
+        top: 44px;
+        border-top-left-radius: 0;
+        border-top-right-radius: 0;
+        padding: 10px 0;
+        -webkit-box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.3); 
+        box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.3);
+
+        .dropdown-item {
+            font-weight: 700;
+            color: hsla(0, 0%, 100%, 0.8);
+            &:hover {
+                color: $white;
+                background-color: #1d1f20;
+            }
+        }
+    }
+
     .navbar-menu {
         .logo {
             width: 156px;
@@ -41,27 +63,6 @@
                 }
             }
         }
-
-        .dropdown-menu {
-            background-color: #1d1f20;
-            border-color: #1d1f20;
-            position: absolute;
-            top: 44px;
-            border-top-left-radius: 0;
-            border-top-right-radius: 0;
-            padding: 10px 0;
-            -webkit-box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.3); 
-            box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.3);
-
-            .dropdown-item {
-                font-weight: 700;
-                color: hsla(0, 0%, 100%, 0.8);
-                &:hover {
-                    color: $white;
-                    background-color: #1d1f20;
-                }
-            }
-        }
     }
 
     .navbar-utilities {
@@ -70,6 +71,32 @@
             position: relative;
             padding-left: 40px;
             color: #8f949b;
+        }
+
+        #notifications {
+            list-style: none;
+            a {
+                background-color: #1d1f20;
+                width: 35px;
+                height: 35px;
+
+                &:hover {
+                    background-color: #5d5f62;
+                    border-color: #5d5f62;
+                }
+
+                i {
+                    position: relative;
+                    left: 23%;
+                    top: 4%;
+                    font-size: 20px;
+                }
+
+                .badge {
+                    top: -17px;
+                    font-size: 10px;
+                }
+            }
         }
 
         .nav-item {
@@ -106,11 +133,12 @@
                     background-color: lighten($darkorange, 10%);
                 }
             }
+            
             .btn-account {
-                background-color: $darkblack;
+                opacity: .8;
+                transition: all .2s ease-in-out;
                 &:hover {
-                    box-shadow: 0 0 0 1px lighten($darkblack, 10%);
-                    background-color: lighten($darkblack, 10%);
+                    opacity: 1;
                 }
             }
         }
@@ -159,7 +187,6 @@
     width: 40px;
     height: 40px;
     border-radius: 50%;
-    margin-right: 10px;
   }
   
   .user-details {
