--- a/templates/header.html.twig
+++ b/templates/header.html.twig
@@ -1,64 +1,72 @@
 <nav class="navbar sticky-top justify-content-center bg-darkgrey">
-    <div class="wrapper-center d-flex justify-content-between">
-        <div class="navbar-menu d-flex flex-row align-items-center">
-            <a class="navbar-brand m-0" href="{{ path('app_home') }}"><img class="logo" src="{{ asset('build/images/logo-header.png') }}" alt="Logo"></a>
-            <div class="navbar-links">
-                <ul class="navbar-nav flex-row align-items-center mr-auto fw-bold">
-                    <li class="nav-item ms-3 me-2">
-                        <a class="nav-link" href="{{ path('app_hot') }}">Good deals</a>
-                    </li>
-                    <li class="nav-item ms-2 me-3">
-                        <a class="nav-link" href="{{ path('app_coupon') }}">Coupon codes</a>
-                    </li>
-                    <div class="dropdown">
-                        <a class="btn nav-link menu-button shape-circle d-flex align-items-center dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            Menu
-                        </a>
-                        <ul class="dropdown-menu">
-                            {{ render(controller('App\\Controller\\DealGroupMenuController::showDealGroupMenu')) }}
-                        </ul>
-                    </div>
-                </ul>
-            </div>
-        </div>
-        <div class="navbar-utilities d-flex flex-row align-items-center">
-            <form action="{{ path('app_search') }}" method="POST" role="search" class="d-flex align-items-center">
-                <input class="form-control me-2 shape-circle" type="search" name="search_query" placeholder="Search..." aria-label="Search">
-                <i class="icon search-icon fas fa-search"></i>
-            </form>
-            {% if app.user %}
-                <li class="nav-item ms-2 me-2">
-                    <a href="{{ path('app_logout') }}" class="btn btn-logout shape-circle">
-                        <i class="icon fas fa-right-from-bracket"></i>
-                        Logout
-                    </a>
+<div class="wrapper-center d-flex justify-content-between">
+    <div class="navbar-menu d-flex flex-row align-items-center">
+        <a class="navbar-brand m-0" href="{{ path('app_home') }}"><img class="logo" src="{{ asset('build/images/logo-header.png') }}" alt="Logo"></a>
+        <div class="navbar-links">
+            <ul class="navbar-nav flex-row align-items-center mr-auto fw-bold">
+                <li class="nav-item ms-3 me-2">
+                    <a class="nav-link" href="{{ path('app_hot') }}">Good deals</a>
                 </li>
-                <li class="nav-item  ms-2 me-2">
-                    <a href="{{ path('app_post') }}" class="btn btn-post shape-circle">
-                        <i class="icon fas fa-plus"></i>
-                        Post...
-                    </a>
+                <li class="nav-item ms-2 me-3">
+                    <a class="nav-link" href="{{ path('app_coupon') }}">Coupon codes</a>
                 </li>
-                <li class="nav-item">
-                    <a href="{{ path('app_account') }}" class="btn btn-account shape-circle">
-                        <i class="icon fas fa-user"></i>
-                        Account
+                <div class="dropdown">
+                    <a class="btn nav-link menu-button shape-circle d-flex align-items-center dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        Menu
                     </a>
-                </li>
-            {% else %}
-                <li class="nav-item ms-2 me-2">
-                    <a href="{{ path('app_login') }}" class="btn btn-login shape-circle">
-                        <i class="icon far fa-user"></i>
-                        Login
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a href="{{ path('app_login') }}" class="btn btn-post shape-circle">
-                        <i class="icon fas fa-plus"></i>
-                        Post...
-                    </a>
-                </li>
-            {% endif %}
+                    <ul class="dropdown-menu">
+                        {{ render(controller('App\\Controller\\DealGroupMenuController::showDealGroupMenu')) }}
+                    </ul>
+                </div>
+            </ul>
         </div>
     </div>
+    <div class="navbar-utilities d-flex flex-row align-items-center">
+        <form action="{{ path('app_search') }}" method="POST" role="search" class="d-flex align-items-center">
+            <input class="form-control me-2 shape-circle" type="search" name="search_query" placeholder="Search..." aria-label="Search">
+            <i class="icon search-icon fas fa-search"></i>
+        </form>
+        {% if app.user %}
+            <li id="notifications" class="dropdown mx-2">
+                <a class="btn nav-link menu-button shape-circle d-flex align-items-center" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    <i class="icon fas fa-bell"></i>
+                    <span class="badge rounded-pill bg-danger">{{ alerted_deals|length }}</span>
+                </a>
+                <ul class="dropdown-menu">
+                    {{ render(controller('App\\Controller\\AccountAlertController::showNotifications', { 'alerted_deals': alerted_deals })) }}
+                </ul>
+            </li>
+            <li class="nav-item me-2">
+                <a href="{{ path('app_account') }}" class="btn-account" title="My account">
+                    <img src="https://picsum.photos/200" alt="Profile Picture" class="profile-picture">
+                </a>
+            </li>
+            <li class="nav-item me-2">
+                <a href="{{ path('app_post') }}" class="btn btn-post shape-circle">
+                    <i class="icon fas fa-plus"></i>
+                    Post...
+                </a>
+            </li>
+            <li class="nav-item me-2">
+                <a href="{{ path('app_logout') }}" class="btn btn-logout shape-circle" title="Logout">
+                    <i class="icon fas fa-right-from-bracket"></i>
+                    Logout
+                </a>
+            </li>
+        {% else %}
+            <li class="nav-item ms-2 me-2">
+                <a href="{{ path('app_login') }}" class="btn btn-login shape-circle">
+                    <i class="icon far fa-user"></i>
+                    Login
+                </a>
+            </li>
+            <li class="nav-item">
+                <a href="{{ path('app_login') }}" class="btn btn-post shape-circle">
+                    <i class="icon fas fa-plus"></i>
+                    Post...
+                </a>
+            </li>
+        {% endif %}
+    </div>
+</div>
 </nav>
