--- a/templates/account/save_deal.html.twig
+++ b/templates/account/save_deal.html.twig
@@ -10,8 +10,20 @@
                 <p class="user-name">{{ app.user.pseudo }}</p>
                 <p class="user-status">Status: Online</p>
             </div>
+            <div class="settings-icon ms-4">
+                {% if app.request.attributes.get('_route') == 'app_account_settings' %}
+                    <a href="#" onclick="window.history.back(); return false;">
+                        <i class="fas fa-arrow-left"></i>
+                    </a>
+                {% else %}
+                    <a href="{{ path('app_account_settings') }}" class"btn nav-link menu-button shape-circle d-flex align-items-center">
+                        <i class="fas fa-cog"></i>
+                    </a>
+                {% endif %}
+            </div>
         </div>
     </div>
+
     
     <nav class="submenu">
         <ul class="nav mx-auto wrapper-center">
