--- a/templates/notifications/_notifications.html.twig
+++ b/templates/notifications/_notifications.html.twig
@@ -1,8 +1,10 @@
-{% for alerted_deal in alerted_deals %}
-    <li>
-        <a href="{{ path('app_deal', {'id': alerted_deal.id}) }}">
-            <span class="dropdown-item notification-item">New alert: The deal "{{ alerted_deal.title }}" corresponds to your alert!</span>
-        </a>
-    </li>
-    <hr class="text-white">
+{% for notification in app.session.get('notifications') %}
+    {% if notification.readed is same as(0) %}
+         <li>
+            <a href="{{ path('app_read_notification', {'id': notification.id, 'dealId': notification.deal.id}) }}">
+                <span class="dropdown-item notification-item">{{ notification.description }}</span>
+            </a>
+        </li>
+        <hr class="text-white">
+    {% endif %}
 {% endfor %}
