--- a/templates/post/post.html.twig
+++ b/templates/post/post.html.twig
@@ -6,7 +6,7 @@
     <div class="row g-0 mx-auto p-2 wrapper-center">
         <h1 class="pb-3">Create a Deal</h1>
         <div class="row mb-3 col-4 bg-white p-2">
-            {{ form_start(form, {'attr': {'class': 'post-deal', 'novalidate': 'novalidate'}}) }}
+            {{ form_start(form, {'attr': {'class': 'post-deal'}}) }}
                 <div class="form-group">
                     {{ form_label(form.title, 'Title') }}
                     {{ form_widget(form.title, {'attr': {'class': 'post-el', 'placeholder': 'Title'}}) }}
