--- a/templates/account/settings.html.twig
+++ b/templates/account/settings.html.twig
@@ -27,7 +27,7 @@
 
 {% block body %}
     <div class="row g-0 mx-auto p-2 wrapper-center">
-        <h1>Mes paramètres</h1>
+        <h1>Settings</h1>
 
         <!-- Champ pseudo -->
         <div class="mb-3">
@@ -35,7 +35,7 @@
             <div class="d-flex">
                 <form action="{{ path('app_account_settings_update_pseudo') }}" method="post" class="d-inline-block">
                     <input type="text" id="pseudo" name="pseudo" class="form-control me-2" value="{{ app.user.pseudo }}">
-                    <button type="submit" class="btn btn-primary btn-edit-field">Modifier</button>
+                    <button type="submit" class="btn btn-primary btn-edit-field">Modify</button>
                 </form>
             </div>
         </div>
@@ -47,18 +47,18 @@
             <div class="d-flex">
                 <form action="{{ path('app_account_settings_update_email') }}" method="post" class="d-inline-block">
                     <input type="text" id="email" name="email" class="form-control me-2" value="{{ app.user.email }}">
-                    <button type="submit" class="btn btn-primary btn-edit-field">Modifier</button>
+                    <button type="submit" class="btn btn-primary btn-edit-field">Modify</button>
                 </form>
             </div>
         </div>
 
         <!-- Champ mot de passe -->
         <div class="mb-3">
-            <label for="password" class="form-label">Mot de passe:</label>
+            <label for="password" class="form-label">Password:</label>
             <div class="d-flex">
                 <form action="{{ path('app_account_settings_update_password') }}" method="post" class="d-inline-block">
                     <input type="password" id="password" name="password" class="form-control me-2" value="********">
-                    <button type="submit" class="btn btn-primary btn-edit-field">Modifier</button>
+                    <button type="submit" class="btn btn-primary btn-edit-field">Modify</button>
                 </form>
             </div>
         </div>
@@ -66,7 +66,7 @@
         <!-- Bouton supprimer le compte -->
         <div>
             <form id="delete-account-form" action="{{ path('app_account_settings_delete') }}" method="post">
-                <button type="submit" class="btn btn-danger btn-delete-account" onclick="return confirm('Êtes-vous sûr de vouloir supprimer votre compte ?')">Supprimer mon compte</button>
+                <button type="submit" class="btn btn-danger btn-delete-account" onclick="return confirm('Are you sure you want to delete your account ?')">Delete Account</button>
             </form>
         </div>
     </div>
